functional test fix